# GFX_Raytracer

./: CMakeLists.txt  main.cpp  readme.md  readme.txt
lib/lodepng/: lodepng.cpp  lodepng.h
scenes/: anim.xml  blur.xml  dtd-test.xml  example1.xml  example2.xml  example3.xml  example4.xml  example5.xml  example6.xml  example7.xml  example8.xml  example9.xml  exampletest.xml  scene.dtd  supersampling.xml
src/: AmbientLight.h  Camera.h  Color.h  ColorMaterial.h  Face.h  GifEncoder.h  Image.h  ImageDecoder.h  ImageEncoder.h  ImageExporter.h  Intersection.h  Light.h  Material.h  Mesh.h  ParallelLight.h  PointLight.h  Ray.h  Raytracer.h  Scene.h  SceneParser.h  Sphere.h  Surface.h  TextureMaterial.h  WavefrontParser.h  matrix.h  point2.h  vec3.h
